--- a/package.json
+++ b/package.json
@@ -3,19 +3,18 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "postinstall": "ng build --prod"
+    "e2e": "ng e2e"
+    
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.2.0",
     "@angular/cli": "~7.3.1",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
+
     "@angular/compiler-cli": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
@@ -32,13 +31,15 @@
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.0.0",
     "tslib": "^1.9.0",
-    "typescript": "~3.2.2",
+    
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
     "@angular/language-service": "~7.2.0",
     "@types/node": "~8.9.4",
+	    "@angular/common": "~7.2.0",
+    "@angular/compiler": "~7.2.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "codelyzer": "~4.5.0",
@@ -51,10 +52,8 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
+	"typescript": "~3.2.2",
     "tslint": "~5.11.0"
-  },
-  "engines": {
-    "node": "8.11.3",
-    "npm": "5.6.0"
   }
+
 }
