--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
   "name": "omdb",
   "version": "0.0.0",
+  "engines";{
+  "node":"v8.11.3",
+  "npm":"5.6.0"},
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
-    
+    "e2e": "ng e2e",
+	"postinstall":"ng build --output-path angularapp  --aot --prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.2.0",
     "@angular/cli": "~7.3.1",
-
     "@angular/compiler-cli": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
@@ -27,18 +29,19 @@
     "font-awesome": "^4.7.0",
     "http": "0.0.0",
     "jquery": "^3.3.1",
+    "path": "^0.12.7",
     "popper.js": "^1.14.7",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.0.0",
     "tslib": "^1.9.0",
-    
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+	"typescript": "~3.2.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
     "@angular/language-service": "~7.2.0",
     "@types/node": "~8.9.4",
-	    "@angular/common": "~7.2.0",
+    "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
@@ -52,8 +55,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-	"typescript": "~3.2.2",
+    
     "tslint": "~5.11.0"
   }
-
 }
