--- a/package.json
+++ b/package.json
@@ -6,18 +6,16 @@
   "npm":"5.6.0"},
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-	"postinstall":"ng build --output-path omdb-master  --aot --prod"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.2.0",
-    "@angular/cli": "~7.3.1",
-    "@angular/compiler-cli": "~7.2.0",
+
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
     "@angular/platform-browser": "~7.2.0",
@@ -34,8 +32,8 @@
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.0.0",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26",
-	"typescript": "~3.2.2"
+    "zone.js": "~0.8.26"
+	
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
@@ -55,7 +53,9 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    
-    "tslint": "~5.11.0"
+    "typescript": "~3.2.2"
+    "tslint": "~5.11.0",    
+	"@angular/cli": "~7.3.1",
+    "@angular/compiler-cli": "~7.2.0"
   }
 }
